Migration to java 25