@@ -2,4 +2,4 @@
 pushd "%~dp0" 
 set OpenXLIFF_HOME=%CD%
 popd
-%OpenXLIFF_HOME%\bin\java.exe --module-path %OpenXLIFF_HOME%\lib -m openxliff/com.maxprograms.converters.TmxExporter %* 
+%OpenXLIFF_HOME%\bin\java.exe -XX:+UseCompactObjectHeaders --module-path %OpenXLIFF_HOME%\lib -m openxliff/com.maxprograms.converters.TmxExporter %* 
